--- a/genindex.html
+++ b/genindex.html
@@ -80,10 +80,6 @@
 </li>
         <li><a href="modules/effect.html#gensound.effect.JoinedEffect.apply">(gensound.effect.JoinedEffect method)</a>
 </li>
-        <li><a href="modules/effect.html#gensound.effect.LinearFadeIn.apply">(gensound.effect.LinearFadeIn method)</a>
-</li>
-        <li><a href="modules/effect.html#gensound.effect.LinearFadeOut.apply">(gensound.effect.LinearFadeOut method)</a>
-</li>
         <li><a href="modules/effect.html#gensound.effect.LowPassFilter.apply">(gensound.effect.LowPassFilter method)</a>
 </li>
         <li><a href="modules/effect.html#gensound.effect.MaskEndEffect.apply">(gensound.effect.MaskEndEffect method)</a>
@@ -91,6 +87,8 @@
         <li><a href="modules/effect.html#gensound.effect.MaskStartEffect.apply">(gensound.effect.MaskStartEffect method)</a>
 </li>
         <li><a href="modules/effect.html#gensound.effect.Resampling.apply">(gensound.effect.Resampling method)</a>
+</li>
+        <li><a href="modules/effect.html#gensound.effect.ReversePlay.apply">(gensound.effect.ReversePlay method)</a>
 </li>
       </ul></li>
   </ul></td>
@@ -151,13 +149,15 @@
 </li>
       <li><a href="modules/sound.html#gensound.sound.Sound.from_fft">from_fft() (gensound.sound.Sound class method)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="modules/sound.html#gensound.sound.Sound.from_file">from_file() (gensound.sound.Sound class method)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="modules/sound.html#gensound.sound.Sound.from_sawtoothwave">from_sawtoothwave() (gensound.sound.Sound class method)</a>
 </li>
       <li><a href="modules/sound.html#gensound.sound.Sound.from_sinwave">from_sinwave() (gensound.sound.Sound class method)</a>
+</li>
+      <li><a href="modules/sound.html#gensound.sound.Sound.from_squarewave">from_squarewave() (gensound.sound.Sound class method)</a>
 </li>
       <li><a href="modules/sound.html#gensound.sound.Sound.from_whitenoise">from_whitenoise() (gensound.sound.Sound class method)</a>
 </li>
@@ -172,11 +172,13 @@
       <ul>
         <li><a href="modules/effect.html#gensound.effect.LinearFadeOut.gen_mask">(gensound.effect.LinearFadeOut method)</a>
 </li>
-      </ul></li>
-      <li><a href="modules/index.html#module-gensound">gensound (module)</a>
+        <li><a href="modules/effect.html#gensound.effect.MaskEffect.gen_mask">(gensound.effect.MaskEffect method)</a>
 </li>
+      </ul></li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="modules/index.html#module-gensound">gensound (module)</a>
+</li>
       <li><a href="modules/effect.html#module-gensound.effect">gensound.effect (module)</a>
 </li>
       <li><a href="modules/exceptions.html#module-gensound.exceptions">gensound.exceptions (module)</a>
@@ -235,6 +237,8 @@
 <h2 id="M">M</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="modules/effect.html#gensound.effect.MaskEffect">MaskEffect (class in gensound.effect)</a>
+</li>
       <li><a href="modules/effect.html#gensound.effect.MaskEndEffect">MaskEndEffect (class in gensound.effect)</a>
 </li>
   </ul></td>
@@ -287,6 +291,8 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="modules/effect.html#gensound.effect.Resampling">Resampling (class in gensound.effect)</a>
 </li>
+      <li><a href="modules/effect.html#gensound.effect.ReversePlay">ReversePlay (class in gensound.effect)</a>
+</li>
   </ul></td>
 </tr></table>
 
@@ -309,22 +315,8 @@
 <h2 id="T">T</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="modules/effect.html#gensound.effect.ChangeSpeed.then">then() (gensound.effect.ChangeSpeed method)</a>
-
-      <ul>
-        <li><a href="modules/effect.html#gensound.effect.Effect.then">(gensound.effect.Effect method)</a>
+      <li><a href="modules/effect.html#gensound.effect.Effect.then">then() (gensound.effect.Effect method)</a>
 </li>
-        <li><a href="modules/effect.html#gensound.effect.HighPassFilter.then">(gensound.effect.HighPassFilter method)</a>
-</li>
-        <li><a href="modules/effect.html#gensound.effect.LinearFadeIn.then">(gensound.effect.LinearFadeIn method)</a>
-</li>
-        <li><a href="modules/effect.html#gensound.effect.LinearFadeOut.then">(gensound.effect.LinearFadeOut method)</a>
-</li>
-        <li><a href="modules/effect.html#gensound.effect.LowPassFilter.then">(gensound.effect.LowPassFilter method)</a>
-</li>
-        <li><a href="modules/effect.html#gensound.effect.Resampling.then">(gensound.effect.Resampling method)</a>
-</li>
-      </ul></li>
   </ul></td>
 </tr></table>
 
