--- a/genindex.html
+++ b/genindex.html
@@ -74,6 +74,8 @@
       <li><a href="modules/effect.html#gensound.effect.ChangeSpeed.apply">apply() (gensound.effect.ChangeSpeed method)</a>
 
       <ul>
+        <li><a href="modules/effect.html#gensound.effect.ChangeVolume.apply">(gensound.effect.ChangeVolume method)</a>
+</li>
         <li><a href="modules/effect.html#gensound.effect.Effect.apply">(gensound.effect.Effect method)</a>
 </li>
         <li><a href="modules/effect.html#gensound.effect.HighPassFilter.apply">(gensound.effect.HighPassFilter method)</a>
@@ -90,6 +92,8 @@
 </li>
         <li><a href="modules/effect.html#gensound.effect.ReversePlay.apply">(gensound.effect.ReversePlay method)</a>
 </li>
+        <li><a href="modules/effect.html#gensound.effect.Trim.apply">(gensound.effect.Trim method)</a>
+</li>
       </ul></li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
@@ -103,9 +107,9 @@
 <h2 id="C">C</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="modules/sound.html#gensound.sound.Sound.change_volume">change_volume() (gensound.sound.Sound method)</a>
-</li>
       <li><a href="modules/effect.html#gensound.effect.ChangeSpeed">ChangeSpeed (class in gensound.effect)</a>
+</li>
+      <li><a href="modules/effect.html#gensound.effect.ChangeVolume">ChangeVolume (class in gensound.effect)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
@@ -316,6 +320,10 @@
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="modules/effect.html#gensound.effect.Effect.then">then() (gensound.effect.Effect method)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="modules/effect.html#gensound.effect.Trim">Trim (class in gensound.effect)</a>
 </li>
   </ul></td>
 </tr></table>
